--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "whatsapp-web.js",
-  "version": "1.10.0",
+  "name": "modern-whatsapp-web.js",
+  "version": "1.10.1",
   "description": "Library for interacting with the WhatsApp Web API ",
   "main": "./index.js",
   "typings": "./index.d.ts",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pedroslopez/whatsapp-web.js.git"
+    "url": "git+https://github.com/akshatbhargava123/whatsapp-web.js"
   },
   "keywords": [
     "whatsapp",
@@ -24,9 +24,9 @@
   "author": "Pedro Lopez",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/pedroslopez/whatsapp-web.js/issues"
+    "url": "https://github.com/akshatbhargava123/whatsapp-web.js/issues"
   },
-  "homepage": "https://github.com/pedroslopez/whatsapp-web.js#readme",
+  "homepage": "https://github.com/akshatbhargava123/whatsapp-web.js#readme",
   "dependencies": {
     "@pedroslopez/moduleraid": "^4.1.0",
     "jsqr": "^1.3.1",
